# zscm-score-management

./: .gitignore  AGENTS.md  Cargo.toml  config.toml  gen.sql  newspaper_unified.py  reporter.sql  sh_user.sql  zscm.db
src/: main.rs
src/auth/: mod.rs
src/handler/: article.rs  article_from_dump.rs  batch_update_tv_urls.rs  calc_monthly.rs  cooperation.rs  event.rs  get_articles.rs  get_cooperation_scores.rs  get_event_scores.rs  get_monthly_add_score.rs  get_monthly_sub_score.rs  get_page_meta.rs  get_paper_abnormal_articles.rs  get_programs.rs  get_reporter_categories.rs  get_reporter_events.rs  get_reporter_info_by_name.rs  get_reporters.rs  login.rs  mod.rs  monthly_add_score.rs  monthly_sub_score.rs  reporter.rs  score.rs  search_similar_combined.rs  search_similar_content.rs  search_similar_titles.rs  vectorize_titles.rs
tests/: db.rs
tool/: merge_reporter.py  reporter.xls  search_similar_titles.py  vectorize_zscm_titles.py
