[package]
name = "zscm-score-management"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] } # 处理 HTTP 请求和流式响应
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "json",
] }
tokio = { version = "*", features = ["full"] } # Rust 异步运行时
serde = { version = "*", features = ["derive"] } # 序列化/反序列化 JSON
serde_json = "*" # JSON 处理
axum = { version = "0.7.4" }
clap = { version = "*", features = ["derive"] }
anyhow = "*"
toml = "*"
md5 = "0.7"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
redis = { version = "0.32.4", features = ["tokio-comp"] }
